--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -25,10 +27,4 @@ jobs:
     - name: Run Unit Tests
       run: |
         mkdir -p .octocov
-        go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
-
-    - name: Comment coverage
-      if: github.event_name == 'pull_request'
-      uses: k1LoW/octocov-action@v0
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        go test -v -race ./...
