--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,9 +2,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+      types: [opened, synchronize, reopened]
 
 jobs:
   test:
@@ -28,3 +28,16 @@ jobs:
       run: |
         mkdir -p .octocov
         go test -v -race ./...
+
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v4.2.1
+      env:
+        SONAR_TOKEN: ${{ secrets.ORG_SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.ORG_SONAR_HOST_URL }}
+      with:
+        args: >
+          -Dsonar.projectKey=${{ github.repository_owner }}_${{ github.event.repository.name }}
+          -Dsonar.sources=.
+          -Dsonar.tests=.
+          -Dsonar.test.inclusions=**/*_test.go
+          -Dsonar.go.coverage.reportPaths=coverage.out        
