--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
+        cache: true
+        cache-dependency-path: |
+          **/go.mod
+          **/go.sum
 
     - name: Install dependencies
       run: go mod download
