--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,11 +46,13 @@ jobs:
         run: |
           mkdir -p ~/.gnupg
           chmod 700 ~/.gnupg
+          
           echo 'use-agent' > ~/.gnupg/gpg.conf
           echo 'pinentry-mode loopback' >> ~/.gnupg/gpg.conf
           echo 'allow-loopback-pinentry' > ~/.gnupg/gpg-agent.conf
+          
           echo "${{ secrets.MAGALUBOT_GPG_PRIVATE_KEY }}" | gpg --batch --yes --pinentry-mode loopback --passphrase "${{ secrets.MAGALUBOT_GPG_PASSPHRASE }}" --import
-          gpgconf --kill gpg-agent
+
 
       - name: Config Git
         id: config-git
@@ -62,14 +64,21 @@ jobs:
           git config --global tag.gpgsign true
           git config --global user.signingkey $(gpg --list-secret-keys --keyid-format LONG | grep sec | awk '{print $2}' | cut -d'/' -f2)
           git config --global gpg.program $(which gpg)
+          git config --global gpg.passphrase "${MAGALUBOT_GPG_PASSPHRASE}"
+
       
       - name: Create and push tag
         id: create-and-push-tag
         if: steps.config-git.outcome == 'success'
+        env:
+          GPG_PASSPHRASE: ${{ secrets.MAGALUBOT_GPG_PASSPHRASE }}
         run: |
-          export GPG_TTY=$(tty)
-          git tag -a "${{ github.event.inputs.version }}" -m "Release ${{ github.event.inputs.version }}"
-          git push origin "${{ github.event.inputs.version }}"  
+          echo "RELOADAGENT" | gpg-connect-agent
+          echo 'echo $GPG_PASSPHRASE | gpg --batch --no-tty --yes --pinentry-mode loopback --passphrase-fd 0 --sign' > sign.sh
+          chmod +x sign.sh
+          git config --global gpg.program "$(pwd)/sign.sh"
+          git tag -a ${{ github.event.inputs.version }} -m "Release ${{ github.event.inputs.version }}"
+          git push origin ${{ github.event.inputs.version }}
 
       - name: Publish to Go package registry
         id: publish-to-go-package-registry
