--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=magalucloud
 
 # Source code analysis
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/*_test.go,**/vendor/**,**/cmd/examples/**
 
 # Test file configuration
 sonar.tests=.
@@ -16,3 +16,5 @@ sonar.test.exclusions=**/vendor/**
 sonar.scm.provider=git
 # Go-specific configuration
 sonar.go.coverage.reportPaths=coverage.out
+
+sonar.coverage.reportPaths=coverage.out
