chore: change sonar

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,7 +35,7 @@ jobs:
     
 
     - name: Upload Coverage Report to SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
+      uses: sonarsource/sonarqube-scan-action@v4.2.1
       with:
         args: >
           -Dsonar.login=${{ secrets.MAGALUBOT_SONAR_TOKEN }}
