--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,4 +38,4 @@ jobs:
       uses: sonarsource/sonarqube-scan-action@v4.2.1
       with:
         args: >
-          -Dsonar.login=${{ secrets.MAGALUBOT_SONAR_TOKEN }}
+          -Dsonar.token=${{ secrets.MAGALUBOT_SONAR_TOKEN }}
