--- a/.github/workflows/go-checks.yml
+++ b/.github/workflows/go-checks.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #v5.3.0
         with:
           go-version: '1.23'  
 
@@ -53,7 +53,7 @@ jobs:
 
       - name: Post PR comment with errors
         if: always()  
-        uses: actions/github-script@v6
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea #v7.0.1
         env:
           FMT_ERRORS: ${{ steps.fmt.outputs.unformatted_files }}
           VET_ERRORS: ${{ steps.vet.outputs.vet_errors }}
