--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "main" ]
     types: [opened, synchronize, reopened]
+    
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   test:
@@ -13,12 +17,12 @@ jobs:
     runs-on: ${{ vars.RUNNER_RUNS_ON }}
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
         fetch-depth: 0
 
     - name: Set up Go
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #v5.3.0
       with:
         go-version: '1.23'
         cache: true
@@ -35,7 +39,7 @@ jobs:
     
 
     - name: Upload Coverage Report to SonarCloud
-      uses: sonarsource/sonarqube-scan-action@v4.2.1
+      uses: sonarsource/sonarqube-scan-action@bfd4e558cda28cda6b5defafb9232d191be8c203 #v4.2.1
       with:
         args: >
           -Dsonar.token=${{ secrets.MAGALUBOT_SONAR_TOKEN }}
