--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   release:
     name: Release
-    runs-on: ${{ vars.RUNNER_RUNS_ON }}
+    runs-on: ${{ vars.RUNNER_RUNS_ON }} # settings > secrets and variables > variables > RUNNER_RUNS_ON
     permissions:
       contents: write 
     env:
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #v5.3.0
         with:
-          go-version: "1.23"
+          go-version: ${{ vars.GO_VERSION }} # settings > secrets and variables > variables > GO_VERSION
           cache: true
           cache-dependency-path: |
             **/go.mod
