--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   test:
     name: Run Unit Tests
-    runs-on: ${{ vars.RUNNER_RUNS_ON }}
+    runs-on: ${{ vars.RUNNER_RUNS_ON }} # settings > secrets and variables > variables > RUNNER_RUNS_ON
 
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #v5.3.0
       with:
-        go-version: '1.23'
+        go-version: ${{ vars.GO_VERSION }} # settings > secrets and variables > variables > GO_VERSION
         cache: true
         cache-dependency-path: |
           **/go.mod
