feat: dbaas versioning

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=magalucloud
 
 # Source code analysis
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/cmd/examples/**
+sonar.exclusions=**/*_test.go,**/vendor/**,**/cmd/examples/**,**/dbaas/v1/**
 
 # Test file configuration
 sonar.tests=.
