--- a/.github/workflows/go-checks.yml
+++ b/.github/workflows/go-checks.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   check:
-    runs-on: ${{ vars.RUNNER_RUNS_ON }} # settings > secrets and variables > variables > RUNNER_RUNS_ON
+    runs-on: ${{ vars.RUNNER_RUNS_ON || 'ubuntu-latest' }} # settings > secrets and variables > variables > RUNNER_RUNS_ON
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #v5.3.0
         with:
-          go-version: ${{ vars.GO_VERSION }} # settings > secrets and variables > variables > GO_VERSION
+          go-version: ${{ vars.GO_VERSION || '1.24'}} # settings > secrets and variables > variables > GO_VERSION
 
       - name: Run go fmt
         id: fmt
