--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,16 @@ jobs:
           cache-dependency-path: |
             **/go.mod
             **/go.sum
-          
+      
+      - name: Setup Python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 #v5.6.0
+        with:
+          python-version: ${{ vars.PYTHON_VERSION }} # settings > secrets and variables > variables > PYTHON_VERSION
+          cache: true
+          cache-dependency-path: |
+            **/go.mod
+            **/go.sum
+
       - name: Validate version format
         id: validate-version
         run: |
