--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,4 +10,4 @@ python:
     - requirements: docs/requirements.txt
 
 sphinx:
-  configuration: docs/main_generator.py
+  configuration: docs/source/conf.py
