--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,7 @@ build:
   os: "ubuntu-24.04"
   tools:
     python: "3.12"
+    golang: "1.24"
 
 python:
   install:
@@ -11,3 +12,4 @@ python:
 
 sphinx:
   configuration: docs/conf.py
+  
