--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,12 @@ build:
   os: "ubuntu-24.04"
   tools:
     python: "3.12"
+    golang: "1.24"
 
 python:
   install:
     - requirements: docs/requirements.txt
 
 sphinx:
-  configuration: docs/main_generator.py
+  configuration: docs/conf.py
+  
