--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -32,6 +32,7 @@ jobs:
         run: go mod download
 
       - name: Run Unit Tests
+        timeout-minutes: 10
         run: |
           go test -v -race -coverprofile=coverage.out ./...
 
